.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
11:06:53 **** Incremental Build of configuration Debug for project NO_DELAY ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F767xx -c -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -I"C:/Users/Usuario/Desktop/1-2023/EMBEBIDOS_II/GITHUB REPO/IMT-322/NO_DELAY/Drivers/BSP" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:175:5: warning: "/*" within comment [-Wcomment]
  175 |     /* USER CODE BEGIN 3 */
      |      
../Core/Src/main.c:106:8: warning: unused variable 'ePul' [-Wunused-variable]
  106 |   bool ePul = false;
      |        ^~~~
../Core/Src/main.c: At top level:
../Core/Src/main.c:179:6: error: conflicting types for 'delayInit'
  179 | void delayInit( delay_t * delay, tick_t duration){
      |      ^~~~~~~~~
In file included from ../Core/Src/main.c:20:
../Core/Inc/main.h:46:6: note: previous declaration of 'delayInit' was here
   46 | void delayInit(delay_t * delay, bool_t duration);
      |      ^~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.
